syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.postchain.server.grpc";
option java_outer_classname = "InitProto";

package postchain.rpc;

service InitService {
  rpc InitNode (InitNodeRequest) returns (InitNodeReply) {} // Initialize postchain node
}

message InitNodeRequest {
  bytes privkey = 1;
}

message InitNodeReply {
  string message = 1;
}
